plane svg animation test

--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,7 @@
     <title>Groupe Atlantic</title>
     <link rel="stylesheet" type="text/css" href="sass/css.css">
     <link rel="stylesheet" type="text/css" href="sass/animate.css">
+    <link rel="stylesheet" href="https://use.typekit.net/kba2qks.css">
 </head>
 <body>
 
@@ -164,7 +165,11 @@
 <div class="container">
     <div class="flex">
         <div class="left">
-            <img src="images/Ideal Premier Club - White.svg">
+            <img src="images/Ideal Premier Club - White2.svg">
+        </div>
+
+        <div class="right">
+            <h1>Website launching in</h1>
         </div>
     </div>
 </div>
