--- a/code.html
+++ b/code.html
@@ -4,6 +4,7 @@
              viewBox="0 0 250.4 95.1" style="enable-background:new 0 0 250.4 95.1;" xml:space="preserve">
 
             <g class="plane animated fadeIn">
+                <path d="M248.3,21.8l1.6-1.6l-1-3.2l0.9-0.9c0.4-0.4,0.4-1,0-1.3l0,0c-0.4-0.4-1-0.4-1.3,0l-0.2,0.2l-0.8-2.5l0.8-0.8
                     c0.4-0.4,0.4-1,0-1.3l0,0c-0.4-0.4-1-0.4-1.3,0l-0.1,0.1l-1.1-3.4l1.5-1.6c5.6-5.2,2.9-8-2.4-2.4l-1.5,1.6L240,3.6l0.1-0.1
                     c0.4-0.4,0.4-1,0-1.3l0,0c-0.4-0.4-1-0.4-1.3,0L238,3l-2.5-0.8l0.2-0.2c0.4-0.4,0.4-1,0-1.3l0,0c-0.4-0.4-1-0.4-1.3,0l-0.9,0.9
                     l-3.2-1l-1.6,1.6l9.9,5.4c0.6,0.3,0.7,1.1,0.3,1.6l-4.8,5.6l-4.1-1.3l-0.6,0.6l2.8,1.9c0.4,0.3,0.6,0.9,0.3,1.3
