--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Groupe Atlantic</title>
     <link rel="stylesheet" type="text/css" href="sass/css.css">
+    <link rel="stylesheet" type="text/css" href="sass/media-queries.css">
     <link rel="stylesheet" type="text/css" href="sass/animate.css">
     <link rel="stylesheet" href="https://use.typekit.net/kba2qks.css">
 </head>
@@ -240,6 +241,9 @@
 
                 <div class="right">
                     <h1>Website launching in</h1>
+                </div>
+
+                <div class="social-media-icons">
                 </div>
             </div>
 
