--- a/index.html
+++ b/index.html
@@ -241,13 +241,9 @@
                     </div>
 
                     <div class="right">
-                        <h1>Website launching in</h1>
+                        <h1>Scheme details</h1>
+                        <h2>Click here to view the premier club details</h2>
                     </div>
-                </div>
-
-                <div class="social-media-icons">
-                    <img src="images/facebook.svg" class="social-media-btn">
-                    <img src="images/twitter.svg" class="social-media-btn">
                 </div>
             </div>
 
@@ -399,6 +395,14 @@
         </div>
 
     </div>
+    <div class="social-media-icons">
+                    <a href=""><img src="images/facebook.svg" class="social-media-btn"></a>
+                    <a href=""><img src="images/twitter.svg" class="social-media-btn"></a>
+                </div>
+
+                <div class="small-print">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
 </div>
 
 </body>
