--- a/index.html
+++ b/index.html
@@ -395,14 +395,17 @@
         </div>
 
     </div>
-    <div class="social-media-icons">
-                    <a href=""><img src="images/facebook.svg" class="social-media-btn"></a>
-                    <a href=""><img src="images/twitter.svg" class="social-media-btn"></a>
-                </div>
 
-                <div class="small-print">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                </div>
+    <div class="bottom-container">
+        <div class="social-media-icons">
+            <a href=""><img src="images/facebook.svg" class="social-media-btn"></a>
+            <a href=""><img src="images/twitter.svg" class="social-media-btn"></a>
+        </div>
+
+        <div class="small-print">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+    </div>
 </div>
 
 </body>
