--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <div class="copy-container">
                 <div class="flex">
                     <div class="left">
-                        <img src="images/Ideal Premier Club - White2.svg" class="logo">
+                        <img src="images/Ideal-logo-white.png" class="logo">
                     </div>
 
                     <div class="right">
