--- a/index.html
+++ b/index.html
@@ -239,7 +239,14 @@
                     </div>
 
                     <div class="right">
-                        <h1>Scheme details</h1>
+                        <h1>Premier Club 2021</h1>
+                        <p>We are very excited to announce that the Ideal Boilers Premier Club is back!  Following on from a fantastic trip to Miami in May this year, we will be embarking on our next installer trip in Spring 2021.</p><br>
+                        <p><strong>Qualification starts now!</strong> The new club will run from
+                        <br><strong>7th October 2019 – 31st December 2020</strong><br> meaning you have got an extra quarter to get registering. We can’t reveal where we’re taking you just yet, but stay tuned as the location will be announced soon.</p><br>
+                        <p>Over the coming months this website will unlock to reveal key areas to include a ‘My Performance’ page to keep track of your progress alongside other exciting updates that include location and trip details.
+                        <br><br>
+                        For now, all you need to do is register your interest in joining Premier Club 2021 by visiting  the link – we will then be in touch to share your qualification criteria.
+                            We look forward to rewarding your loyalty with an amazing trip in 2021. Be sure to join us</p>
                     </div>
                 </div>
             </div>
@@ -397,7 +404,7 @@
             <a href=""><img src="images/twitter.svg" class="social-media-btn"></a>
         </div>
         <div class="small-print">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>*All registrants need to be a member of Installer Connect. To register an account on Installer Connect, please visit www.installerconnect.com</p>
         </div>
     </div>
 </div>
