change layout more suitable to copy size

--- a/index.html
+++ b/index.html
@@ -234,19 +234,15 @@
         </div>
             <div class="copy-container">
                 <div class="flex">
-                    <div class="left">
-                        <img src="images/Ideal-logo-white.png" class="logo">
-                    </div>
 
                     <div class="right">
+                        <img src="images/Ideal-logo-white.png" class="logo">
                         <h1>Premier Club 2021</h1>
                         <p>We are very excited to announce that the Ideal Boilers Premier Club is back!  Following on from a fantastic trip to Miami in May this year, we will be embarking on our next installer trip in Spring 2021.</p><br>
-                        <p><strong>Qualification starts now!</strong> The new club will run from
-                        <br><strong>7th October 2019 – 31st December 2020</strong><br> meaning you have got an extra quarter to get registering. We can’t reveal where we’re taking you just yet, but stay tuned as the location will be announced soon.</p><br>
-                        <p>Over the coming months this website will unlock to reveal key areas to include a ‘My Performance’ page to keep track of your progress alongside other exciting updates that include location and trip details.
-                        <br><br>
-                        For now, all you need to do is register your interest in joining Premier Club 2021 by visiting  the link – we will then be in touch to share your qualification criteria.
-                            We look forward to rewarding your loyalty with an amazing trip in 2021. Be sure to join us</p>
+                        <p>Qualification starts now! The new club will run from
+                        <br><strong>7th October 2019 – 31st December 2020</strong><br> meaning you have got an extra quarter to get registering. We can’t reveal where we’re taking you just yet, but stay tuned as the location will be announced soon. Over the coming months this website will unlock to reveal key areas to include a ‘My Performance’ page to keep track of your progress alongside other exciting updates that include location and trip details.</p>
+                        <br>
+                        <p>For now, all you need to do is register your interest in joining Premier Club 2021 by visiting  the link – we will then be in touch to share your qualification criteria. We look forward to rewarding your loyalty with an amazing trip in 2021. Be sure to join us</p>
                     </div>
                 </div>
             </div>
