edit media queries

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                         Qualification starts now! The new club will run from
                         <br><strong>7th October 2019 – 31st December 2020</strong><br> meaning you have got an extra quarter to get registering. We can’t reveal where we’re taking you just yet, but stay tuned as the location will be announced soon. Over the coming months this website will unlock to reveal key areas to include a ‘My Performance’ page to keep track of your progress alongside other exciting updates that include location and trip details.
                         <br>
-                        For now, all you need to do is register your interest in joining Premier Club 2021 by visiting  the link – we will then be in touch to share your qualification criteria. We look forward to rewarding your loyalty with an amazing trip in 2021. Be sure to join us</p>
+                        For now, all you need to do is register your interest in joining Premier Club 2021 by visiting  the link – we will then be in touch to share your qualification criteria. We look forward to rewarding your loyalty with an amazing trip in 2021. Be sure to join us!</p>
                         <div class="register-now-btn"><a href="">Register Now</a></div>
                     </div>
                 </div>
