Update files as per Wordpress.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <div class="container">
     <div class="flex">
         <div class="plane">
-            <?xml version="1.0" encoding="utf-8"?>
             <!-- Generator: Adobe Illustrator 23.0.6, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                  viewBox="0 0 1109 670" style="enable-background:new 0 0 1109 670;" xml:space="preserve">
@@ -235,23 +234,22 @@
             <div class="copy-container">
                 <div class="flex">
                     <div class="left">
-                        <img src="images/Ideal-logo-white.png" class="logo">
+                        <img src="images/Ideal-logo-white.png" class="logo" alt=" Ideal Boilers Premier Club Logo">
                     </div>
 
                     <div class="right">
                         <h1>Premier Club 2021</h1>
-                        <p>We are very excited to announce that the Ideal Boilers Premier Club is back!  Following on from a fantastic trip to Miami in May this year, we will be embarking on our next installer trip in Spring 2021.</p><br>
-                        <p><strong>Qualification starts now!</strong> The new club will run from
-                        <br><strong>7th October 2019 – 31st December 2020</strong><br> meaning you have got an extra quarter to get registering. We can’t reveal where we’re taking you just yet, but stay tuned as the location will be announced soon.</p><br>
-                        <p>Over the coming months this website will unlock to reveal key areas to include a ‘My Performance’ page to keep track of your progress alongside other exciting updates that include location and trip details.
+                        <p>We are very excited to announce that the Ideal Boilers Premier Club is back!  Following on from a fantastic trip to Miami in May this year, we will be embarking on our next installer trip in Spring 2021.<br><br>
+                        <strong>Qualification starts now!</strong> The new club will run from
+                        <strong>1st October 2019 – 31st December 2020,</strong> meaning you have got an extra quarter to get registering. We can’t reveal where we’re taking you just yet, but stay tuned as the location will be announced soon.<br><br>
+                        Over the coming months this website will unlock to reveal key areas to include a ‘My Performance’ page to keep track of your progress alongside other exciting updates that include location and trip details.
                         <br><br>
-                        For now, all you need to do is register your interest in joining Premier Club 2021 by visiting  the link – we will then be in touch to share your qualification criteria.
-                            We look forward to rewarding your loyalty with an amazing trip in 2021. Be sure to join us</p>
+                        For now, all you need to do is register your interest in joining Premier Club 2021 by visiting the link below – we will then be in touch to share your qualification criteria. <strong><br>We look forward to rewarding your loyalty with an amazing trip in 2021. Be sure to join us!</strong></p><br><br>
+                            <div class="register-now-btn"><a href="form-page">Register Now</a></div>
                     </div>
                 </div>
             </div>
         <div class="pin">
-            <?xml version="1.0" encoding="utf-8"?>
             <!-- Generator: Adobe Illustrator 23.0.6, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                  viewBox="0 0 1366 266" style="enable-background:new 0 0 1366 266;" xml:space="preserve">
@@ -399,12 +397,8 @@
     </div>
 
     <div class="bottom-container">
-        <div class="social-media-icons">
-            <a href=""><img src="images/facebook.svg" class="social-media-btn"></a>
-            <a href=""><img src="images/twitter.svg" class="social-media-btn"></a>
-        </div>
         <div class="small-print">
-            <p>*All registrants need to be a member of Installer Connect. To register an account on Installer Connect, please visit www.installerconnect.com</p>
+            <p>*All registrants need to be a member of Installer Connect. To register an account on Installer Connect, please visit <a href="http://www.installerconnect.com">www.installerconnect.com</a></p>
         </div>
     </div>
 </div>
