--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="sass/animate.css">
     <link rel="stylesheet" href="https://use.typekit.net/kba2qks.css">
 </head>
-<body>
+<body class="purple">
 
 <div class="landing-container">
     <div class="flex">
