Nav media queries.

--- a/my-performance.html
+++ b/my-performance.html
@@ -18,7 +18,7 @@
                 <nav class="nav">
                     <a class="skip" href="#menu">Menu</a>
                     <ul id="menu">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">Home</a></li>
                         <li><a href="#">Destination</a></li>
                         <li><a href="#">Hotel</a></li>
                         <li><a href="#">Itinerary</a></li>
@@ -33,7 +33,6 @@
     </header>
 
     <div class="container">
-
     </div>
 
 <script>
