Add title and extends.

--- a/my-performance.html
+++ b/my-performance.html
@@ -32,7 +32,15 @@
         </div>
     </header>
 
-    <div class="container">
+    <div class="perf-container">
+        <h1>My Performance</h1>
+
+        <div class="flex">
+            <div class="welcome section">
+                <h2 class="underline">Welcome. Hayley</h2>
+                <h3>Your Details</h3>
+            </div>
+        </div>
     </div>
 
 <script>
