Change font styling.

--- a/my-performance.html
+++ b/my-performance.html
@@ -37,8 +37,14 @@
 
         <div class="flex">
             <div class="welcome section">
-                <h2 class="underline">Welcome. Hayley</h2>
+                <h2 class="underline">Welcome, Hayley</h2>
                 <h3>Your Details</h3>
+                <div class="flex">
+                    <div class="full-name">
+                        <h4>Full Name</h4>
+                        <p>Hayley Duffin</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
