My Performance media queries.

--- a/my-performance.html
+++ b/my-performance.html
@@ -34,18 +34,49 @@
 
     <div class="perf-container">
         <h1>My Performance</h1>
-
         <div class="flex">
             <div class="welcome section">
-                <h2 class="underline">Welcome, Hayley</h2>
+                <h2>Welcome, Hayley</h2>
+                <hr>
                 <h3>Your Details</h3>
                 <div class="flex">
-                    <div class="full-name">
+                    <div class="info">
                         <h4>Full Name</h4>
                         <p>Hayley Duffin</p>
                     </div>
+
+                    <div class="info">
+                        <h4>Email Address</h4>
+                        <p>hduffin1@hotmail.com</p>
+                    </div>
+
+                    <div class="info">
+                        <h4>Gas safe number</h4>
+                        <p>123456</p>
+                    </div>
                 </div>
             </div>
+
+            <div class="enrollment section">
+                <div class="flex">
+                    <h2>Enrollment</h2>
+                    <h4 class="login-arg">Login Successful</h4>
+                </div>
+                <hr>
+                <h3>Your enrollment details</h3>
+                <div class="flex">
+                    <div class="info">
+                        <h4>Enrollment date</h4>
+                        <p>23rd Oct 2019</p>
+                    </div>
+
+                    <div class="info">
+                        <h4>Updated at</h4>
+                        <p>15:23  22/10/2019</p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 
