Add points section.

--- a/my-performance.html
+++ b/my-performance.html
@@ -76,7 +76,16 @@
                     </div>
                 </div>
             </div>
+        </div>
 
+        <div class="points">
+            <div class="points-header">
+                <h2>Your Points</h2>
+            </div>
+            <div class="info">
+                <h3>Total points</h3>
+                <h2>345</h2>
+            </div>
         </div>
     </div>
 
