Add points section.

--- a/my-performance.html
+++ b/my-performance.html
@@ -82,9 +82,59 @@
             <div class="points-header">
                 <h2>Your Points</h2>
             </div>
-            <div class="info">
-                <h4>Total points</h4>
-                <h3>345</h3>
+
+            <div class="mp-bar">
+            </div>
+
+                <div class="flex">
+                    <div class="info">
+                        <h4>Total points</h4>
+                        <h3>345</h3>
+                    </div>
+
+                    <div class="info">
+                        <h4>Points passport</h4>
+                        <h3>567</h3>
+                    </div>
+                </div>
+
+            <div class="flex">
+                <div class="info points-calc">
+                    <h4>How your points are calculated</h4>
+                    <p>Earn 10 Points for Logic MAX, Logic +, Vogue Max & Vogue registrations, 5 Points for Ideal 5-Yr warranty boiler models and 1 Point for Controls.</p>
+                </div>
+
+                <div class="info points-req">
+                    <h4>Points required: 222</h4>
+                </div>
+            </div>
+        </div>
+
+        <div class="totals-holder">
+            <div class="flex">
+                <div class="totals">
+                    <h2>Premium Boilers</h2>
+                    <hr>
+                    <div class="info">
+                        <h4>Total installed</h4>
+                    </div>
+                </div>
+
+                <div class="totals">
+                    <h2>Base Boilers</h2>
+                    <hr>
+                    <div class="info">
+                        <h4>Total installed</h4>
+                    </div>
+                </div>
+
+                <div class="totals">
+                    <h2>Controls</h2>
+                    <hr>
+                    <div class="info">
+                        <h4>Total installed</h4>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
