Add heading classes.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <source src="video/home-vid.webm">
    </video>
     <div class="container">
-        <h1 class="heading">Las Vegas</h1>
-        <h2 class="subheading">April 2021</h2>
+        <h1 class="home-heading animated fadeIn">Las Vegas</h1>
+        <h2 class="home-subheading animated fadeIn">April 2021</h2>
     </div>
 </div>
 
