Add CTA buttons.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <header>
     <div class="container">
         <div class="flex">
-            <img src="images/Ideal-logo-white.png" class="header-logo">
+        <img src="images/Ideal-logo-white.png" class="header-logo">
             <nav class="nav">
-                <a class="skip" href="#menu">Menu</a>
+            <a class="skip" href="#menu">Menu</a>
                 <ul id="menu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Destination</a></li>
@@ -33,46 +33,61 @@
 </header>
 
 <div class="wrapper">
-
-   <video autoplay loop muted class="wrapper__video">
-      <source src="video/home-vid.webm">
-   </video>
+    <video autoplay loop muted class="wrapper__video">
+    <source src="video/home-vid.webm">
+    </video>
     <div class="container">
         <h1 class="home-heading animated fadeIn">Las Vegas</h1>
         <h2 class="home-subheading animated fadeIn">April 2021</h2>
     </div>
 </div>
 
-<div class="copy-container">
-    <h3>Be part of the exclusive installers club<br>from Ideal Boilers.</h3>
-    <p>The Ideal Premier Club is an exclusive Club for loyal Ideal installers. In 2019 we sent our installers on our first Premier Club trip to Miami in the sunshine state of Florida.<br><br>Visit our dedicated Miami page to see what an amazing time our installers had and be sure to keep the <strong>22nd April – 26th April 2021</strong> free to join us for another awesome adventure! <br><br>We will release exclusive trip details right here, so keep checking back for the
-latest information.</p>
-</div>
+<main>
+    <div class="main-container">
+        <h3>Be part of the exclusive installers club<br>from Ideal Boilers.</h3>
+        <p>The Ideal Premier Club is an exclusive Club for loyal Ideal installers. In 2019 we sent our installers on our first Premier Club trip to Miami in the sunshine state of Florida.<br><br>Visit our dedicated Miami page to see what an amazing time our installers had and be sure to keep the <strong>22nd April – 26th April 2021</strong> free to join us for another awesome adventure! <br><br>We will release exclusive trip details right here, so keep checking back for the
+        latest information.</p>
+        <div class="homepage-login-btn">
+            <a href="">Log in now to track your progress</a>  
+        </div>
+    </div>
 
+    <div class="buttons container">
+        <div class="flex">
+            <div class="destination-btn">
+                <h3>Destination</h3>
+            </div>
+
+            <div class="mp-btn">
+                <h3>My Performance</h3>
+            </div>
+        </div>
+    </div>
+</main>
 
 <script>
-    var nav = document.querySelector("nav ul"),
-        navToggle = document.querySelector("nav .skip");
-    if (navToggle) {
-      navToggle.addEventListener("click",
-      function(e) {
-      if (nav.className == "open") {
-        nav.className = "";
-      } else {
-        nav.className = "open";
-      }
-      e.preventDefault();
-      }, false);
-    }
+var nav = document.querySelector("nav ul"),
+navToggle = document.querySelector("nav .skip");
+if (navToggle) {
+navToggle.addEventListener("click",
+function(e) {
+if (nav.className == "open") {
+nav.className = "";
+} else {
+nav.className = "open";
+}
+e.preventDefault();
+}, false);
+}
 
-    /* Any click outside of the nav element will close the menu if it's open */
-    var specifiedElement = document.querySelector('nav');
-    document.addEventListener('click', function(event) {
-      var isClickInside = specifiedElement.contains(event.target);
-      if (!isClickInside && nav.className == "open") {
-        nav.className = "";
-      } 
-    });
+/* Any click outside of the nav element will close the menu if it's open */
+var specifiedElement = document.querySelector('nav');
+document.addEventListener('click', function(event) {
+var isClickInside = specifiedElement.contains(event.target);
+if (!isClickInside && nav.className == "open") {
+nav.className = "";
+} 
+});
 </script>
 
 </body>
