--- a/index.html
+++ b/index.html
@@ -61,33 +61,37 @@
             <div class="mp-btn">
                 <h3>My Performance</h3>
             </div>
+
+            <div class="2019-btn">
+                <h3>My Performance</h3>
+            </div>
         </div>
     </div>
 </main>
 
 <script>
-var nav = document.querySelector("nav ul"),
-navToggle = document.querySelector("nav .skip");
-if (navToggle) {
-navToggle.addEventListener("click",
-function(e) {
-if (nav.className == "open") {
-nav.className = "";
-} else {
-nav.className = "open";
-}
-e.preventDefault();
-}, false);
-}
+    var nav = document.querySelector("nav ul"),
+    navToggle = document.querySelector("nav .skip");
+    if (navToggle) {
+    navToggle.addEventListener("click",
+    function(e) {
+    if (nav.className == "open") {
+    nav.className = "";
+    } else {
+    nav.className = "open";
+    }
+    e.preventDefault();
+    }, false);
+    }
 
-/* Any click outside of the nav element will close the menu if it's open */
-var specifiedElement = document.querySelector('nav');
-document.addEventListener('click', function(event) {
-var isClickInside = specifiedElement.contains(event.target);
-if (!isClickInside && nav.className == "open") {
-nav.className = "";
-} 
-});
+    /* Any click outside of the nav element will close the menu if it's open */
+    var specifiedElement = document.querySelector('nav');
+    document.addEventListener('click', function(event) {
+    var isClickInside = specifiedElement.contains(event.target);
+    if (!isClickInside && nav.className == "open") {
+    nav.className = "";
+    } 
+    });
 </script>
 
 </body>
