Change div class.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h3>My Performance</h3>
             </div>
 
-            <div class="2019-btn">
+            <div class="lastyr-btn">
                 <h3>My Performance</h3>
             </div>
         </div>
