--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
 
     <div class="buttons container">
         <div class="flex">
-            <div class="destination-btn">
-                <h3>Destination</h3>
-            </div>
+          <a href=""><div class="destination-btn">
+              <h3><a href="">Destination</h3>
+            </div></a>
 
             <div class="mp-btn">
-                <h3>My Performance</h3>
+                <h3><a href="">My Performance</a></h3>
             </div>
 
             <div class="lastyr-btn">
-                <h3>My Performance</h3>
+                <h3><a href="">2019 Trip</a></h3>
             </div>
         </div>
     </div>
