--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<header>
+<header class="nav-down">
     <div class="container">
         <div class="flex">
         <img src="images/Ideal-logo-white.png" class="header-logo">
@@ -69,30 +69,7 @@
     </div>
 </main>
 
-<script>
-    var nav = document.querySelector("nav ul"),
-    navToggle = document.querySelector("nav .skip");
-    if (navToggle) {
-    navToggle.addEventListener("click",
-    function(e) {
-    if (nav.className == "open") {
-    nav.className = "";
-    } else {
-    nav.className = "open";
-    }
-    e.preventDefault();
-    }, false);
-    }
-
-    /* Any click outside of the nav element will close the menu if it's open */
-    var specifiedElement = document.querySelector('nav');
-    document.addEventListener('click', function(event) {
-    var isClickInside = specifiedElement.contains(event.target);
-    if (!isClickInside && nav.className == "open") {
-    nav.className = "";
-    } 
-    });
-</script>
+<script src="js/nav.js"></script>
 
 </body>
 </html>
