Add social media icons & footer.

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 </head>
 <body>
 
-<header class="nav-down">
+<header>
     <div class="container">
         <div class="flex">
         <img src="images/Ideal-logo-white.png" class="header-logo">
             <nav class="nav">
             <a class="skip" href="#menu">Menu</a>
                 <ul id="menu">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">Destination</a></li>
                     <li><a href="#">Hotel</a></li>
                     <li><a href="#">Itinerary</a></li>
                     <li><a href="#">Activities</a></li>
                     <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">My Performance</a></li>
+                    <li><a href="my-performance.html">My Performance</a></li>
                     <li><a href="#">2019 Trip</a></li>
                 </ul>
             </nav>
@@ -54,9 +54,9 @@
 
     <div class="buttons container">
         <div class="flex">
-          <a href=""><div class="destination-btn">
-              <h3><a href="">Destination</h3>
-            </div></a>
+            <div class="destination-btn">
+              <h3><a href="">Destination</a></h3>
+            </div>
 
             <div class="mp-btn">
                 <h3><a href="">My Performance</a></h3>
@@ -68,6 +68,23 @@
         </div>
     </div>
 </main>
+
+<footer>
+    <div class="container">
+        <div class="social-med">
+           <a href=""><img src="images/twitter-brands.svg"></a>
+           <a href=""><img src="images/facebook-brands.svg"></a>
+           <a href=""><img src="images/instagram-brands.svg"></a>
+            <img src="images/youtube-brands.svg">
+        </div>
+    </div>
+
+    <div class="purple-band">
+        <div class="container">
+            <p>Designed by <a href="https://www.firstevent.co.uk/" target="_blank">First Event</a> | 2019</p>
+        </div>
+    </div>
+</footer>
 
 <script src="js/nav.js"></script>
 
