--- a/my-performance.html
+++ b/my-performance.html
@@ -82,6 +82,7 @@
             </div>
 
             <div class="mp-bar">
+                <img src="images/my-performance.svg">
             </div>
 
                 <div class="flex">
@@ -114,7 +115,10 @@
                     <h2>Premium Boilers</h2>
                     <hr>
                     <div class="info">
-                        <h4>Total installed</h4>
+                        <div class="flex">
+                            <h4>Total installed</h4>
+                            <h4>7</h4>
+                        </div>
                     </div>
                 </div>
 
@@ -122,7 +126,10 @@
                     <h2>Base Boilers</h2>
                     <hr>
                     <div class="info">
-                        <h4>Total installed</h4>
+                        <div class="flex">
+                            <h4>Total installed</h4>
+                            <h4>12</h4>
+                        </div>
                     </div>
                 </div>
 
@@ -130,12 +137,32 @@
                     <h2>Controls</h2>
                     <hr>
                     <div class="info">
-                        <h4>Total installed</h4>
+                        <div class="flex">
+                            <h4>Total installed</h4>
+                            <h4>15</h4>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <footer>
+    <div class="container">
+        <div class="social-med">
+           <a href=""><img src="images/twitter-brands.svg"></a>
+           <a href=""><img src="images/facebook-brands.svg"></a>
+           <a href=""><img src="images/instagram-brands.svg"></a>
+            <img src="images/youtube-brands.svg">
+        </div>
+    </div>
+
+    <div class="purple-band">
+        <div class="container">
+            <p>Designed by <a href="https://www.firstevent.co.uk/" target="_blank">First Event</a> | 2019</p>
+        </div>
+    </div>
+</footer>
 
 <script src="js/nav.js"></script>
 
