Add anchor tag to youtube icon.

--- a/my-performance.html
+++ b/my-performance.html
@@ -147,13 +147,13 @@
         </div>
     </div>
 
-    <footer>
+<footer>
     <div class="container">
         <div class="social-med">
-           <a href=""><img src="images/twitter-brands.svg"></a>
-           <a href=""><img src="images/facebook-brands.svg"></a>
-           <a href=""><img src="images/instagram-brands.svg"></a>
-            <img src="images/youtube-brands.svg">
+            <a href=""><img src="images/twitter-brands.svg"></a>
+            <a href=""><img src="images/facebook-brands.svg"></a>
+            <a href=""><img src="images/instagram-brands.svg"></a>
+            <a href=""><img src="images/youtube-brands.svg"></a>
         </div>
     </div>
 
