--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 <footer>
     <div class="container">
         <div class="social-med">
-           <a href=""><img src="images/twitter-brands.svg"></a>
-           <a href=""><img src="images/facebook-brands.svg"></a>
-           <a href=""><img src="images/instagram-brands.svg"></a>
-            <img src="images/youtube-brands.svg">
+            <a href=""><img src="images/twitter-brands.svg"></a>
+            <a href=""><img src="images/facebook-brands.svg"></a>
+            <a href=""><img src="images/instagram-brands.svg"></a>
+            <a href=""><img src="images/youtube-brands.svg"></a>
         </div>
     </div>
 
