Add sign out button.

--- a/my-performance.html
+++ b/my-performance.html
@@ -32,7 +32,12 @@
     </header>
 
     <div class="perf-container">
-        <h1>My Performance</h1>
+
+        <div class="title-logout">
+            <h1>My Performance</h1>
+            <p>Sign out</p>
+        </div>
+
         <div class="flex">
             <div class="welcome section">
                 <h2>Welcome, Hayley</h2>
