--- a/hotel.html
+++ b/hotel.html
@@ -14,7 +14,7 @@
 <header>
     <div class="container">
         <div class="flex">
-        <img src="images/Ideal-logo-white.png" class="header-logo">
+        <a href=""><img src="images/Ideal-logo-white.png" class="header-logo"></a>
             <nav class="nav">
             <a class="skip" href="#menu">Menu</a>
                 <ul id="menu">
